fix: fix menu card spacing

--- a/src/components/cards/NavMenuCard/styles.css
+++ b/src/components/cards/NavMenuCard/styles.css
@@ -7,6 +7,7 @@
   align-items: flex-start;
   padding: 40px;
   min-width: 125px;
+  gap: 25px;
 }
 
 @media screen and (max-width: 600px) {
